# pyrticleslife

./: README.md  pyproject.toml  simulation.py
pyrticles/: bodies.py  rules.py
tests/: test_utils.py
